align bugs fixed

--- a/app/assets/stylesheets/api/reviews.scss
+++ b/app/assets/stylesheets/api/reviews.scss
@@ -48,7 +48,8 @@
 }
 
 .review-author {
-  width: 75%;
+  width: 30%;
+  float: right;
   text-align: right;
   padding-right: 10%;
   font-style: italic;
